--- a/cluster_and_tagging.ipynb
+++ b/cluster_and_tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 127,
    "id": "b16566bb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 128,
    "id": "84d1ef2e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 129,
    "id": "777b9580",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 130,
    "id": "39f04f29",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 131,
    "id": "31f6a5fd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 132,
    "id": "172ebed3",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 133,
    "id": "4d4c5984",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 134,
    "id": "7ab67ce2",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 135,
    "id": "ab74b2a2",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 136,
+   "id": "56da01f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_profiles.to_csv(\"diet_cluster_profiles.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "id": "705dc61a",
    "metadata": {},
    "outputs": [],
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 138,
    "id": "5b58a15c",
    "metadata": {},
    "outputs": [],
@@ -330,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 139,
    "id": "f4561628",
    "metadata": {},
    "outputs": [
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "id": "c8ef216f",
    "metadata": {},
    "outputs": [
@@ -754,7 +764,7 @@
        "[1335 rows x 31 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 141,
    "id": "310c0c91",
    "metadata": {},
    "outputs": [
@@ -822,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 142,
    "id": "094187d1",
    "metadata": {},
    "outputs": [],
@@ -837,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 143,
    "id": "b8b2e725",
    "metadata": {},
    "outputs": [],
@@ -847,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 144,
    "id": "b2032e3e",
    "metadata": {},
    "outputs": [
@@ -870,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 145,
    "id": "9a3b8b2c",
    "metadata": {},
    "outputs": [
@@ -888,7 +898,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,27 +909,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 146,
    "id": "4d2e1769",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_csv(\"final_dataset.csv\", index=False)"
+    "#df_clean.to_csv(\"final_dataset.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "id": "1c802d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
+    "#df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 148,
    "id": "363c0ff7",
    "metadata": {},
    "outputs": [],
@@ -929,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 149,
    "id": "158935aa",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1243,7 @@
        "[1335 rows x 13 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,24 +1254,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c6978d4",
+   "execution_count": 154,
+   "id": "2c1d5dce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average nutrient values for Vegetarian foods:\n",
+      "\n",
+      "FAT (g): 10.79\n",
+      "PROT (g): 9.18\n",
+      "Calories (kcal): 200.31\n",
+      "VITB12 (µg): 1.14\n",
+      "VITD (µg): 0.62\n",
+      "VITC (mg): 6.36\n",
+      "Iron (mg): 1.23\n",
+      "\n",
+      "Food subgroups included in the Vegetarian diet (with counts):\n",
+      "Bread, grain/cereal products and potatoes: 266\n",
+      "Dairy: 178\n",
+      "Drinks: 95\n",
+      "Fish, legumes, meat and eggs: 370\n",
+      "Fruit: 98\n",
+      "Nuts: 34\n",
+      "Spreading and cooking fats: 90\n",
+      "Vegetables: 204\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for foods that include 'Vegetarian'\n",
+    "vegetarian_df = df_clean_demo[df_clean_demo['diet_label'].apply(lambda x: 'Vegetarian' in x)]\n",
+    "\n",
+    "# List of nutrient columns\n",
+    "nutrients = ['FAT (g)', 'PROT (g)', 'Calories (kcal)', \n",
+    "             'VITB12 (µg)', 'VITD (µg)', 'VITC (mg)', 'Iron (mg)']\n",
+    "\n",
+    "# Compute averages\n",
+    "average_nutrients = vegetarian_df[nutrients].mean()\n",
+    "\n",
+    "# Print average nutrient values\n",
+    "print(\"Average nutrient values for Vegetarian foods:\\n\")\n",
+    "for nutrient, value in average_nutrients.items():\n",
+    "    print(f\"{nutrient}: {value:.2f}\")\n",
+    "\n",
+    "# Get value counts of food subgroups\n",
+    "subgroups_counts = vegetarian_df['food_wheel_subgroup'].value_counts()\n",
+    "\n",
+    "print(\"\\nFood subgroups included in the Vegetarian diet (with counts):\")\n",
+    "for subgroup in sorted(subgroups_counts.index):\n",
+    "    print(f\"{subgroup}: {subgroups_counts[subgroup]}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c51f5fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f44fe55",
+   "id": "0d517f19",
    "metadata": {},
    "outputs": [],
    "source": []
