--- a/cluster_and_tagging.ipynb
+++ b/cluster_and_tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "id": "b16566bb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "id": "84d1ef2e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "id": "777b9580",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "id": "39f04f29",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "id": "31f6a5fd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "id": "172ebed3",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "id": "4d4c5984",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "id": "7ab67ce2",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "id": "ab74b2a2",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "id": "56da01f8",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "id": "705dc61a",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "id": "5b58a15c",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "id": "f4561628",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "id": "c8ef216f",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "[1335 rows x 31 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,12 +778,12 @@
    "id": "ba5c04a5",
    "metadata": {},
    "source": [
-    "### Add tagging for \"high in {nutrient}\" for the top 10%"
+    "### Add tagging for \"high in {nutrient}\" and \"low in {nutrient}\" for the top and bottom 10%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "id": "310c0c91",
    "metadata": {},
    "outputs": [
@@ -809,30 +809,64 @@
       "Phosphorus (mg): 324.00\n",
       "Potassium (mg): 497.00\n",
       "Sodium (mg): 586.00\n",
-      "Zinc (mg): 3.56\n"
+      "Zinc (mg): 3.56\n",
+      "\n",
+      "=== 10th Percentile Thresholds for 'Low in ...' ===\n",
+      "FAT (g): 0.00\n",
+      "PROT (g): 0.30\n",
+      "Calories (kcal): 25.00\n",
+      "VITB1 (mg): 0.00\n",
+      "RIBF (mg): 0.01\n",
+      "VITB6 (mg): 0.01\n",
+      "VITB12 (µg): 0.00\n",
+      "VITD (µg): 0.00\n",
+      "VITE (mg): 0.00\n",
+      "VITC (mg): 0.00\n",
+      "VITA (µg): 0.00\n",
+      "Calcium (mg): 5.00\n",
+      "Iron (mg): 0.00\n",
+      "Magnesium (mg): 3.00\n",
+      "Phosphorus (mg): 12.00\n",
+      "Potassium (mg): 42.00\n",
+      "Sodium (mg): 2.00\n",
+      "Zinc (mg): 0.05\n"
      ]
     }
    ],
    "source": [
-    "# nutrients = list of nutrient column names you want to check\n",
-    "thresholds = {nutrient: df_clean[nutrient].quantile(0.9) for nutrient in nutrient_cols}\n",
+    "# 90th percentile thresholds for \"High in ...\"\n",
+    "high_thresholds = {nutrient: df_clean[nutrient].quantile(0.9) for nutrient in nutrient_cols}\n",
     "\n",
     "print(\"=== 90th Percentile Thresholds for 'High in ...' ===\")\n",
-    "for nutrient, value in thresholds.items():\n",
+    "for nutrient, value in high_thresholds.items():\n",
     "    print(f\"{nutrient}: {value:.2f}\")\n",
     "\n",
-    "# Function to tag benefits\n",
-    "def tag_benefits(row):\n",
-    "    benefits = []\n",
-    "    for nutrient, threshold in thresholds.items():\n",
+    "# 10th percentile thresholds for \"Low in ...\"\n",
+    "low_thresholds = {nutrient: df_clean[nutrient].quantile(0.1) for nutrient in nutrient_cols}\n",
+    "\n",
+    "print(\"\\n=== 10th Percentile Thresholds for 'Low in ...' ===\")\n",
+    "for nutrient, value in low_thresholds.items():\n",
+    "    print(f\"{nutrient}: {value:.2f}\")\n",
+    "\n",
+    "def tag_all(row):\n",
+    "    tags = []\n",
+    "\n",
+    "    # High tags\n",
+    "    for nutrient, threshold in high_thresholds.items():\n",
     "        if row.get(nutrient, 0) >= threshold:\n",
-    "            benefits.append(f\"High in {nutrient}\")\n",
-    "    return benefits if benefits else np.nan"
+    "            tags.append(f\"High in {nutrient}\")\n",
+    "\n",
+    "    # Low tags\n",
+    "    for nutrient, threshold in low_thresholds.items():\n",
+    "        if row.get(nutrient, 0) <= threshold:\n",
+    "            tags.append(f\"Low in {nutrient}\")\n",
+    "\n",
+    "    return tags if tags else np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
    "id": "094187d1",
    "metadata": {},
    "outputs": [],
@@ -847,17 +881,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "id": "b8b2e725",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean['benefits'] = df_clean.apply(tag_benefits, axis=1)"
+    "df_clean['tag'] = df_clean.apply(tag_all, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "id": "b2032e3e",
    "metadata": {},
    "outputs": [
@@ -865,22 +899,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cr/_q1why214gg5d4kb6_zzn9mr0000gn/T/ipykernel_25743/2082883884.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/cr/_q1why214gg5d4kb6_zzn9mr0000gn/T/ipykernel_37367/1819938977.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_clean_demo['benefits'] = df_clean.apply(tag_benefits, axis=1)\n"
+      "  df_clean_demo['tag'] = df_clean.apply(tag_all, axis=1)\n"
      ]
     }
    ],
    "source": [
-    "df_clean_demo['benefits'] = df_clean.apply(tag_benefits, axis=1)"
+    "df_clean_demo['tag'] = df_clean.apply(tag_all, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "id": "9a3b8b2c",
    "metadata": {},
    "outputs": [
@@ -894,11 +928,11 @@
        "       'Zinc (mg)', 'food_wheel_group', 'food_wheel_subgroup',\n",
        "       'Protein_per_kcal', 'Fat_to_Protein', 'Cal_to_Protein',\n",
        "       'Sodium_to_Potassium', 'Micronutrient_Density', 'diet_cluster', 'PCA1',\n",
-       "       'PCA2', 'diet_label', 'benefits'],\n",
+       "       'PCA2', 'diet_label', 'tag'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,27 +943,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "id": "4d2e1769",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_clean.to_csv(\"final_dataset.csv\", index=False)"
+    "df_clean.to_csv(\"final_dataset.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 21,
    "id": "1c802d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
+    "df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 22,
    "id": "363c0ff7",
    "metadata": {},
    "outputs": [],
@@ -939,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 23,
    "id": "158935aa",
    "metadata": {},
    "outputs": [
@@ -976,7 +1010,7 @@
        "      <th>food_wheel_group</th>\n",
        "      <th>food_wheel_subgroup</th>\n",
        "      <th>diet_label</th>\n",
-       "      <th>benefits</th>\n",
+       "      <th>tag</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -994,7 +1028,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in FAT (g)', 'Low in VITB12 (µg)', 'Low ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1010,7 +1044,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>['High in VITC (mg)']</td>\n",
+       "      <td>['High in VITC (mg)', 'Low in FAT (g)', 'Low i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1026,7 +1060,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in FAT (g)', 'Low in VITB12 (µg)', 'Low ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1042,7 +1076,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in VITB12 (µg)', 'Low in VITD (µg)', 'Lo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1058,7 +1092,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in VITB12 (µg)', 'Low in VITD (µg)', 'Lo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1090,7 +1124,7 @@
        "      <td>Dairy, nuts, fish, legumes, meat and eggs</td>\n",
        "      <td>Fish, legumes, meat and eggs</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in VITB12 (µg)', 'Low in VITC (mg)', 'Lo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1331</th>\n",
@@ -1106,7 +1140,7 @@
        "      <td>Dairy, nuts, fish, legumes, meat and eggs</td>\n",
        "      <td>Fish, legumes, meat and eggs</td>\n",
        "      <td>['Continental Diet', 'Vegetarian']</td>\n",
-       "      <td>['High in Iron (mg)', 'High in Sodium (mg)']</td>\n",
+       "      <td>['High in Iron (mg)', 'High in Sodium (mg)', '...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1332</th>\n",
@@ -1122,7 +1156,7 @@
        "      <td>Dairy, nuts, fish, legumes, meat and eggs</td>\n",
        "      <td>Fish, legumes, meat and eggs</td>\n",
        "      <td>['Continental Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>['Low in VITD (µg)', 'Low in VITC (mg)', 'Low ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1333</th>\n",
@@ -1138,7 +1172,7 @@
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>Bread, grain/cereal products and potatoes</td>\n",
        "      <td>['Plant-Focused Flexitarian Diet', 'Vegetarian']</td>\n",
-       "      <td>['High in Sodium (mg)']</td>\n",
+       "      <td>['High in Sodium (mg)', 'Low in VITB12 (µg)', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1334</th>\n",
@@ -1227,23 +1261,23 @@
        "1333  ['Plant-Focused Flexitarian Diet', 'Vegetarian']   \n",
        "1334                                    ['Vegetarian']   \n",
        "\n",
-       "                                               benefits  \n",
-       "0                                                   NaN  \n",
-       "1                                 ['High in VITC (mg)']  \n",
-       "2                                                   NaN  \n",
-       "3                                                   NaN  \n",
-       "4                                                   NaN  \n",
+       "                                                    tag  \n",
+       "0     ['Low in FAT (g)', 'Low in VITB12 (µg)', 'Low ...  \n",
+       "1     ['High in VITC (mg)', 'Low in FAT (g)', 'Low i...  \n",
+       "2     ['Low in FAT (g)', 'Low in VITB12 (µg)', 'Low ...  \n",
+       "3     ['Low in VITB12 (µg)', 'Low in VITD (µg)', 'Lo...  \n",
+       "4     ['Low in VITB12 (µg)', 'Low in VITD (µg)', 'Lo...  \n",
        "...                                                 ...  \n",
-       "1330                                                NaN  \n",
-       "1331       ['High in Iron (mg)', 'High in Sodium (mg)']  \n",
-       "1332                                                NaN  \n",
-       "1333                            ['High in Sodium (mg)']  \n",
+       "1330  ['Low in VITB12 (µg)', 'Low in VITC (mg)', 'Lo...  \n",
+       "1331  ['High in Iron (mg)', 'High in Sodium (mg)', '...  \n",
+       "1332  ['Low in VITD (µg)', 'Low in VITC (mg)', 'Low ...  \n",
+       "1333  ['High in Sodium (mg)', 'Low in VITB12 (µg)', ...  \n",
        "1334  ['High in PROT (g)', 'High in Calcium (mg)', '...  \n",
        "\n",
        "[1335 rows x 13 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "id": "2c1d5dce",
    "metadata": {},
    "outputs": [
