--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "aca2bcb5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "9d55ac6e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7a75ac47",
    "metadata": {},
    "outputs": [
@@ -91,10 +91,18 @@
     "        diet_uri = URIRef(FN + quote(row[\"diet_label\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.belongsToDiet, diet_uri))\n",
     "\n",
-    "    # Benefits\n",
-    "    if pd.notnull(row.get(\"benefits\")):\n",
-    "        benefit_uri = URIRef(FN + quote(row[\"benefits\"], safe=\"\"))\n",
-    "        g.add((food_uri, FN.hasBenefit, benefit_uri))\n",
+    "    tags = row.get(\"tag\")\n",
+    "    if pd.notnull(tags):\n",
+    "        # if stored as string, convert using ast.literal_eval\n",
+    "        if isinstance(tags, str):\n",
+    "            import ast\n",
+    "            try:\n",
+    "                tags = ast.literal_eval(tags)\n",
+    "            except:\n",
+    "                tags = [tags]  # fallback: treat as single tag\n",
+    "        # now iterate safely\n",
+    "        for t in tags:\n",
+    "            g.add((food_uri, FN.hasTag, Literal(t, datatype=XSD.string)))\n",
     "\n",
     "# Serialize RDF/XML\n",
     "g.serialize(\"food_nutrition.rdf\", format=\"xml\")\n",
