--- a/queries.ipynb
+++ b/queries.ipynb
@@ -289,7 +289,35 @@
    "id": "c6cb0131",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"all_foods.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    foods = json.load(f)\n",
+    "\n",
+    "ts_interface = \"\"\"\\\n",
+    "export interface Food {\n",
+    "  foodName: string;\n",
+    "  group: string | null;\n",
+    "  subgroup: string | null;\n",
+    "  diet: string[];\n",
+    "  benefit: string[];\n",
+    "  calories: number;\n",
+    "  protein: number;\n",
+    "  fat: number;\n",
+    "  vitaminB12: number;\n",
+    "  vitaminC: number;\n",
+    "  vitaminD: number;\n",
+    "  iron: number;\n",
+    "}\n",
+    "\n",
+    "export const foods: Food[] = \"\"\"\n",
+    "\n",
+    "ts_data = json.dumps(foods, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "with open(\"all_foods.ts\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(ts_interface + ts_data + \";\\n\")\n",
+    "\n",
+    "print(\"Saved all_foods.ts successfully\")"
+   ]
   }
  ],
  "metadata": {
