--- a/queries.ipynb
+++ b/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "5b4ad62b",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "ffd7e2a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=Nce602306509a465992fe13b6f4b213b2 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N2f922983428040798d2a1241698f15a1 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "43cc1421",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "e292154d",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "2569b3a2",
    "metadata": {},
    "outputs": [
@@ -220,11 +220,11 @@
       "Saved 25 rows to diet_filters_vegetarian.json\n",
       "\n",
       "Running query -> foods_potassium.json\n",
-      "Rows: 275\n",
-      "Saved 275 rows to foods_potassium.json\n",
+      "Rows: 0\n",
+      "Saved 0 rows to foods_potassium.json\n",
       "\n",
       "Running query -> all_foods.json\n",
-      "Rows: 7361\n",
+      "Rows: 1335\n",
       "Saved 1335 rows to all_foods.json\n"
      ]
     }
@@ -285,10 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c6cb0131",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved all_foods.ts successfully\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"all_foods.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    foods = json.load(f)\n",
