--- a/queries.ipynb
+++ b/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "5b4ad62b",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "ffd7e2a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N2f922983428040798d2a1241698f15a1 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N03af29368a9241e6aa432c526fa21ac5 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "43cc1421",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "        SELECT ?foodName ?diet \n",
     "               ?protein ?proteinUnit ?carbs ?carbsUnit ?fat ?fatUnit \n",
     "               ?vitaminC ?vitaminCUnit ?iron ?ironUnit\n",
-    "               ?tag\n",
+    "               ?benefit\n",
     "        WHERE {\n",
     "          ?food a fn:Food ;\n",
     "                fn:foodName ?foodName ;\n",
@@ -85,7 +85,7 @@
     "          OPTIONAL { ?food fn:hasVitaminCUnit ?vitaminCUnit }\n",
     "          OPTIONAL { ?food fn:hasIron ?iron }\n",
     "          OPTIONAL { ?food fn:hasIronUnit ?ironUnit }\n",
-    "          OPTIONAL { ?food fn:hasTag ?tag }\n",
+    "          OPTIONAL { ?food fn:hasBenefit ?benefit }\n",
     "        }\n",
     "        ORDER BY DESC(?vitaminC)\n",
     "        LIMIT 30\n",
@@ -93,14 +93,14 @@
     "\n",
     "    \"top_vitaminC.json\": \"\"\"\n",
     "        PREFIX fn: <http://example.org/food-nutrition#>\n",
-    "        SELECT ?foodName ?vitaminC ?vitaminCUnit ?tag\n",
+    "        SELECT ?foodName ?vitaminC ?vitaminCUnit ?benefit\n",
     "        WHERE {\n",
     "          ?food a fn:Food ;\n",
     "                fn:foodName ?foodName ;\n",
     "                fn:hasVitaminC ?vitaminC ;\n",
     "                fn:hasVitaminCUnit ?vitaminCUnit ;\n",
-    "                fn:hasTag ?tag .\n",
-    "          FILTER(CONTAINS(STR(?tag), \"Vitamin C\"))\n",
+    "                fn:hasBenefit ?benefit .\n",
+    "          FILTER(CONTAINS(STR(?benefit), \"Vitamin C\"))\n",
     "        }\n",
     "        ORDER BY DESC(?vitaminC)\n",
     "        LIMIT 10\n",
@@ -110,7 +110,7 @@
     "        PREFIX fn: <http://example.org/food-nutrition#>\n",
     "        SELECT ?foodName ?group ?subgroup \n",
     "               ?protein ?proteinUnit ?fat ?fatUnit ?carbs ?carbsUnit\n",
-    "               ?tag\n",
+    "               ?benefit\n",
     "        WHERE {\n",
     "          ?food a fn:Food ;\n",
     "                fn:foodName ?foodName ;\n",
@@ -123,7 +123,7 @@
     "          OPTIONAL { ?food fn:hasFatUnit ?fatUnit }\n",
     "          OPTIONAL { ?food fn:hasCarbohydrates ?carbs }\n",
     "          OPTIONAL { ?food fn:hasCarbohydratesUnit ?carbsUnit }\n",
-    "          OPTIONAL { ?food fn:hasTag ?tag }\n",
+    "          OPTIONAL { ?food fn:hasBenefit ?benefit }\n",
     "          FILTER(CONTAINS(STR(?diet), \"Vegetarian\"))\n",
     "        }\n",
     "        ORDER BY DESC(?protein)\n",
@@ -132,12 +132,12 @@
     "\n",
     "    \"foods_potassium.json\": \"\"\"\n",
     "        PREFIX fn: <http://example.org/food-nutrition#>\n",
-    "        SELECT ?foodName ?tag\n",
+    "        SELECT ?foodName ?benefit\n",
     "        WHERE {\n",
     "          ?food a fn:Food ;\n",
     "                fn:foodName ?foodName ;\n",
-    "                fn:hasTag ?tag .\n",
-    "          FILTER(CONTAINS(STR(?tag), \"Potassium\"))\n",
+    "                fn:hasBenefit ?benefit .\n",
+    "          FILTER(CONTAINS(STR(?benefit), \"Potassium\"))\n",
     "        }\n",
     "        ORDER BY ?foodName\n",
     "    \"\"\",\n",
@@ -146,7 +146,7 @@
     "        PREFIX fn: <http://example.org/food-nutrition#>\n",
     "        PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>\n",
     "\n",
-    "        SELECT ?food ?foodName ?group ?subgroup ?diet ?tag\n",
+    "        SELECT ?food ?foodName ?group ?subgroup ?diet ?benefit\n",
     "              ?calories ?protein ?fat ?vitaminB12 ?vitaminC ?vitaminD ?iron\n",
     "        WHERE {\n",
     "          ?food a fn:Food ;\n",
@@ -162,7 +162,7 @@
     "          OPTIONAL { ?food fn:belongsToFoodWheelGroup ?group . }\n",
     "          OPTIONAL { ?food fn:belongsToFoodWheelSubGroup ?subgroup . }\n",
     "          OPTIONAL { ?food fn:belongsToDiet ?diet . }\n",
-    "          OPTIONAL { ?food fn:hasTag ?tag . }\n",
+    "          OPTIONAL { ?food fn:hasBenefit ?benefit . }\n",
     "        }\n",
     "\"\"\"\n",
     "}"
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "e292154d",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "2569b3a2",
    "metadata": {},
    "outputs": [
@@ -216,16 +216,16 @@
       "Saved 0 rows to top_vitaminC.json\n",
       "\n",
       "Running query -> diet_filters_vegetarian.json\n",
-      "Rows: 25\n",
-      "Saved 25 rows to diet_filters_vegetarian.json\n",
+      "Rows: 0\n",
+      "Saved 0 rows to diet_filters_vegetarian.json\n",
       "\n",
       "Running query -> foods_potassium.json\n",
       "Rows: 0\n",
       "Saved 0 rows to foods_potassium.json\n",
       "\n",
       "Running query -> all_foods.json\n",
-      "Rows: 1335\n",
-      "Saved 1335 rows to all_foods.json\n"
+      "Rows: 2340\n",
+      "Saved 1527 rows to all_foods.json\n"
      ]
     }
    ],
@@ -269,8 +269,8 @@
     "                else:\n",
     "                    foods[food_uri][\"diet\"].add(diet_val)\n",
     "\n",
-    "            if row.get(\"tag\"):\n",
-    "                foods[food_uri][\"benefit\"].add(str(row[\"tag\"]))\n",
+    "            if row.get(\"benefit\"):\n",
+    "                foods[food_uri][\"benefit\"].add(str(row[\"benefit\"]))\n",
     "\n",
     "        data = []\n",
     "        for f in foods.values():\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "c6cb0131",
    "metadata": {},
    "outputs": [
