--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "aca2bcb5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "9d55ac6e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7a75ac47",
    "metadata": {},
    "outputs": [
@@ -91,18 +91,18 @@
     "        diet_uri = URIRef(FN + quote(row[\"diet_label\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.belongsToDiet, diet_uri))\n",
     "\n",
-    "    tags = row.get(\"tag\")\n",
-    "    if pd.notnull(tags):\n",
+    "    benefits = row.get(\"benefit\")\n",
+    "    if pd.notnull(benefits):\n",
     "        # if stored as string, convert using ast.literal_eval\n",
-    "        if isinstance(tags, str):\n",
+    "        if isinstance(benefits, str):\n",
     "            import ast\n",
     "            try:\n",
-    "                tags = ast.literal_eval(tags)\n",
+    "                benefits = ast.literal_eval(benefits)\n",
     "            except:\n",
-    "                tags = [tags]  # fallback: treat as single tag\n",
+    "                benefits = [benefits]  # fallback: treat as single benefit\n",
     "        # now iterate safely\n",
-    "        for t in tags:\n",
-    "            g.add((food_uri, FN.hasTag, Literal(t, datatype=XSD.string)))\n",
+    "        for b in benefits:\n",
+    "            g.add((food_uri, FN.hasBenefit, Literal(b, datatype=XSD.string)))\n",
     "\n",
     "# Serialize RDF/XML\n",
     "g.serialize(\"food_nutrition.rdf\", format=\"xml\")\n",
