--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 85,
    "id": "05d98dc4-9e77-47a4-86ab-01af86964da1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 86,
    "id": "17a98176",
    "metadata": {},
    "outputs": [],
@@ -33,14 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 87,
    "id": "36c092f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def classify_vegetarian(row):\n",
-    "    labels = []\n",
-    "\n",
     "    vegetarian_groups = [\n",
     "        'Potatoes and tubers',\n",
     "        'Cereals and cereal products',\n",
@@ -61,15 +59,17 @@
     "    ]\n",
     "\n",
     "    group = row['Food group']\n",
+    "    labels = []\n",
+    "\n",
     "    if group in vegetarian_groups:\n",
     "        labels.append('Vegetarian')\n",
     "\n",
-    "    return labels if labels else np.nan"
+    "    return labels "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 88,
    "id": "3d706bd4",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 89,
    "id": "15052993",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
     "\n",
     "clean_data['food_wheel_group'] = clean_data['Food group'].map(wheel_mapping)\n",
     "\n",
-    "# === Subgroup Mapping (matching Voedingscentrum’s Wheel of Five split) ===\n",
+    "# Subgroup Mapping (matching Voedingscentrum’s Wheel of Five split)\n",
     "subgroup_mapping = {\n",
     "    # Vegetables and fruit\n",
     "    'Vegetables': 'Vegetables',\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 90,
    "id": "1b5479ab",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 91,
    "id": "f52e457a",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 92,
    "id": "33582c64",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 93,
    "id": "c0bdc917",
    "metadata": {},
    "outputs": [],
@@ -654,12 +654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 94,
    "id": "93c5e9c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_data = clean_data[['NEVO-code', 'food_name',\n",
+    "clean_data = clean_data[['NEVO-code', 'Food group', 'food_name',\n",
     "                         'FAT (g)', 'PROT (g)', 'Calories (kcal)',\n",
     "                         'VITB1 (mg)', 'RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)',\n",
     "                         'VITE (mg)', 'VITC (mg)', 'VITA (µg)', 'Calcium (mg)', 'Iron (mg)',\n",
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 95,
    "id": "14432242",
    "metadata": {},
    "outputs": [
@@ -695,6 +695,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>NEVO-code</th>\n",
+       "      <th>Food group</th>\n",
        "      <th>food_name</th>\n",
        "      <th>FAT (g)</th>\n",
        "      <th>PROT (g)</th>\n",
@@ -703,7 +704,6 @@
        "      <th>RIBF (mg)</th>\n",
        "      <th>VITB6 (mg)</th>\n",
        "      <th>VITB12 (µg)</th>\n",
-       "      <th>VITD (µg)</th>\n",
        "      <th>...</th>\n",
        "      <th>Calcium (mg)</th>\n",
        "      <th>Iron (mg)</th>\n",
@@ -721,6 +721,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
+       "      <td>Potatoes and tubers</td>\n",
        "      <td>Potatoes raw</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
@@ -729,7 +730,6 @@
        "      <td>0.04</td>\n",
        "      <td>0.300</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.5</td>\n",
@@ -745,6 +745,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
+       "      <td>Potatoes and tubers</td>\n",
        "      <td>Potatoes new raw</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
@@ -753,7 +754,6 @@
        "      <td>0.04</td>\n",
        "      <td>0.300</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.5</td>\n",
@@ -769,6 +769,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>Potatoes and tubers</td>\n",
        "      <td>Potatoes old raw</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
@@ -777,7 +778,6 @@
        "      <td>0.04</td>\n",
        "      <td>0.220</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.5</td>\n",
@@ -793,6 +793,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
+       "      <td>Cereals and cereal products</td>\n",
        "      <td>Pasta white raw</td>\n",
        "      <td>1.5</td>\n",
        "      <td>12.3</td>\n",
@@ -801,7 +802,6 @@
        "      <td>0.06</td>\n",
        "      <td>0.080</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>15.0</td>\n",
        "      <td>2.0</td>\n",
@@ -817,6 +817,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
+       "      <td>Cereals and cereal products</td>\n",
        "      <td>Rice white raw</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
@@ -825,7 +826,6 @@
        "      <td>0.03</td>\n",
        "      <td>0.120</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>10.0</td>\n",
        "      <td>0.4</td>\n",
@@ -865,6 +865,7 @@
        "    <tr>\n",
        "      <th>2318</th>\n",
        "      <td>5573</td>\n",
+       "      <td>Meat substitutes and dairy substitutes</td>\n",
        "      <td>Tempeh unprepared</td>\n",
        "      <td>4.7</td>\n",
        "      <td>17.6</td>\n",
@@ -873,7 +874,6 @@
        "      <td>0.18</td>\n",
        "      <td>0.091</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>88.0</td>\n",
        "      <td>1.7</td>\n",
@@ -889,6 +889,7 @@
        "    <tr>\n",
        "      <th>2319</th>\n",
        "      <td>5574</td>\n",
+       "      <td>Cereals and cereal products</td>\n",
        "      <td>Bakery mix for doughnuts Dutch style</td>\n",
        "      <td>1.0</td>\n",
        "      <td>11.0</td>\n",
@@ -897,7 +898,6 @@
        "      <td>0.09</td>\n",
        "      <td>0.134</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1.0</td>\n",
@@ -913,6 +913,7 @@
        "    <tr>\n",
        "      <th>2320</th>\n",
        "      <td>5575</td>\n",
+       "      <td>Cheese</td>\n",
        "      <td>Cheese 35+</td>\n",
        "      <td>20.4</td>\n",
        "      <td>27.3</td>\n",
@@ -921,7 +922,6 @@
        "      <td>0.27</td>\n",
        "      <td>0.058</td>\n",
        "      <td>1.81</td>\n",
-       "      <td>0.3</td>\n",
        "      <td>...</td>\n",
        "      <td>959.0</td>\n",
        "      <td>0.2</td>\n",
@@ -937,6 +937,7 @@
        "    <tr>\n",
        "      <th>2321</th>\n",
        "      <td>5576</td>\n",
+       "      <td>Cereals and cereal products</td>\n",
        "      <td>Flour spelt</td>\n",
        "      <td>1.7</td>\n",
        "      <td>13.2</td>\n",
@@ -945,7 +946,6 @@
        "      <td>0.03</td>\n",
        "      <td>0.088</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>20.0</td>\n",
        "      <td>1.6</td>\n",
@@ -961,6 +961,7 @@
        "    <tr>\n",
        "      <th>2322</th>\n",
        "      <td>5577</td>\n",
+       "      <td>Cereals and cereal products</td>\n",
        "      <td>Flour spelt wholemeal</td>\n",
        "      <td>2.3</td>\n",
        "      <td>14.4</td>\n",
@@ -969,7 +970,6 @@
        "      <td>0.09</td>\n",
        "      <td>0.240</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>28.0</td>\n",
        "      <td>3.8</td>\n",
@@ -984,61 +984,74 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2323 rows × 23 columns</p>\n",
+       "<p>2323 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      NEVO-code                             food_name  FAT (g)  PROT (g)  \\\n",
-       "0             1                          Potatoes raw      0.0       2.0   \n",
-       "1             2                      Potatoes new raw      0.0       2.0   \n",
-       "2             3                      Potatoes old raw      0.0       2.0   \n",
-       "3             4                       Pasta white raw      1.5      12.3   \n",
-       "4             5                        Rice white raw      1.0       7.0   \n",
-       "...         ...                                   ...      ...       ...   \n",
-       "2318       5573                     Tempeh unprepared      4.7      17.6   \n",
-       "2319       5574  Bakery mix for doughnuts Dutch style      1.0      11.0   \n",
-       "2320       5575                            Cheese 35+     20.4      27.3   \n",
-       "2321       5576                           Flour spelt      1.7      13.2   \n",
-       "2322       5577                 Flour spelt wholemeal      2.3      14.4   \n",
+       "      NEVO-code                              Food group  \\\n",
+       "0             1                     Potatoes and tubers   \n",
+       "1             2                     Potatoes and tubers   \n",
+       "2             3                     Potatoes and tubers   \n",
+       "3             4             Cereals and cereal products   \n",
+       "4             5             Cereals and cereal products   \n",
+       "...         ...                                     ...   \n",
+       "2318       5573  Meat substitutes and dairy substitutes   \n",
+       "2319       5574             Cereals and cereal products   \n",
+       "2320       5575                                  Cheese   \n",
+       "2321       5576             Cereals and cereal products   \n",
+       "2322       5577             Cereals and cereal products   \n",
        "\n",
-       "      Calories (kcal)  VITB1 (mg)  RIBF (mg)  VITB6 (mg)  VITB12 (µg)  \\\n",
-       "0                88.0        0.12       0.04       0.300         0.00   \n",
-       "1                88.0        0.12       0.04       0.300         0.00   \n",
-       "2                88.0        0.12       0.04       0.220         0.00   \n",
-       "3               356.0        0.10       0.06       0.080         0.00   \n",
-       "4               352.0        0.04       0.03       0.120         0.00   \n",
-       "...               ...         ...        ...         ...          ...   \n",
-       "2318            128.0        0.03       0.18       0.091         0.02   \n",
-       "2319            367.0        0.09       0.09       0.134         0.00   \n",
-       "2320            302.0        0.03       0.27       0.058         1.81   \n",
-       "2321            348.0        0.21       0.03       0.088         0.00   \n",
-       "2322            332.0        0.36       0.09       0.240         0.00   \n",
+       "                                 food_name  FAT (g)  PROT (g)  \\\n",
+       "0                             Potatoes raw      0.0       2.0   \n",
+       "1                         Potatoes new raw      0.0       2.0   \n",
+       "2                         Potatoes old raw      0.0       2.0   \n",
+       "3                          Pasta white raw      1.5      12.3   \n",
+       "4                           Rice white raw      1.0       7.0   \n",
+       "...                                    ...      ...       ...   \n",
+       "2318                     Tempeh unprepared      4.7      17.6   \n",
+       "2319  Bakery mix for doughnuts Dutch style      1.0      11.0   \n",
+       "2320                            Cheese 35+     20.4      27.3   \n",
+       "2321                           Flour spelt      1.7      13.2   \n",
+       "2322                 Flour spelt wholemeal      2.3      14.4   \n",
        "\n",
-       "      VITD (µg)  ...  Calcium (mg)  Iron (mg)  Magnesium (mg)  \\\n",
-       "0           0.0  ...           6.0        0.5            22.0   \n",
-       "1           0.0  ...           6.0        0.5            14.0   \n",
-       "2           0.0  ...           6.0        0.5            17.0   \n",
-       "3           0.0  ...          15.0        2.0            53.0   \n",
-       "4           0.0  ...          10.0        0.4            13.0   \n",
-       "...         ...  ...           ...        ...             ...   \n",
-       "2318        0.0  ...          88.0        1.7            60.0   \n",
-       "2319        0.0  ...          22.0        1.0            21.0   \n",
-       "2320        0.3  ...         959.0        0.2            36.0   \n",
-       "2321        0.0  ...          20.0        1.6            46.0   \n",
-       "2322        0.0  ...          28.0        3.8           120.0   \n",
+       "      Calories (kcal)  VITB1 (mg)  RIBF (mg)  VITB6 (mg)  VITB12 (µg)  ...  \\\n",
+       "0                88.0        0.12       0.04       0.300         0.00  ...   \n",
+       "1                88.0        0.12       0.04       0.300         0.00  ...   \n",
+       "2                88.0        0.12       0.04       0.220         0.00  ...   \n",
+       "3               356.0        0.10       0.06       0.080         0.00  ...   \n",
+       "4               352.0        0.04       0.03       0.120         0.00  ...   \n",
+       "...               ...         ...        ...         ...          ...  ...   \n",
+       "2318            128.0        0.03       0.18       0.091         0.02  ...   \n",
+       "2319            367.0        0.09       0.09       0.134         0.00  ...   \n",
+       "2320            302.0        0.03       0.27       0.058         1.81  ...   \n",
+       "2321            348.0        0.21       0.03       0.088         0.00  ...   \n",
+       "2322            332.0        0.36       0.09       0.240         0.00  ...   \n",
        "\n",
-       "      Phosphorus (mg)  Potassium (mg)  Sodium (mg)  Zinc (mg)  \\\n",
-       "0                60.0           450.0          2.0       0.37   \n",
-       "1                60.0           450.0          2.0       0.20   \n",
-       "2                60.0           450.0          2.0       0.30   \n",
-       "3               125.0           100.0          2.0       1.50   \n",
-       "4               100.0           100.0          2.0       1.80   \n",
-       "...               ...             ...          ...        ...   \n",
-       "2318            190.0           310.0         39.0       1.30   \n",
-       "2319            110.0           167.0        680.0       0.59   \n",
-       "2320            606.0            72.0        661.0       3.99   \n",
-       "2321            180.0           190.0          0.0       1.50   \n",
-       "2322            395.0           395.0          1.0       3.10   \n",
+       "      Calcium (mg)  Iron (mg)  Magnesium (mg)  Phosphorus (mg)  \\\n",
+       "0              6.0        0.5            22.0             60.0   \n",
+       "1              6.0        0.5            14.0             60.0   \n",
+       "2              6.0        0.5            17.0             60.0   \n",
+       "3             15.0        2.0            53.0            125.0   \n",
+       "4             10.0        0.4            13.0            100.0   \n",
+       "...            ...        ...             ...              ...   \n",
+       "2318          88.0        1.7            60.0            190.0   \n",
+       "2319          22.0        1.0            21.0            110.0   \n",
+       "2320         959.0        0.2            36.0            606.0   \n",
+       "2321          20.0        1.6            46.0            180.0   \n",
+       "2322          28.0        3.8           120.0            395.0   \n",
+       "\n",
+       "      Potassium (mg)  Sodium (mg)  Zinc (mg)  \\\n",
+       "0              450.0          2.0       0.37   \n",
+       "1              450.0          2.0       0.20   \n",
+       "2              450.0          2.0       0.30   \n",
+       "3              100.0          2.0       1.50   \n",
+       "4              100.0          2.0       1.80   \n",
+       "...              ...          ...        ...   \n",
+       "2318           310.0         39.0       1.30   \n",
+       "2319           167.0        680.0       0.59   \n",
+       "2320            72.0        661.0       3.99   \n",
+       "2321           190.0          0.0       1.50   \n",
+       "2322           395.0          1.0       3.10   \n",
        "\n",
        "                               food_wheel_group  \\\n",
        "0     Bread, grain/cereal products and potatoes   \n",
@@ -1066,10 +1079,10 @@
        "2321  Bread, grain/cereal products and potatoes  [Vegetarian]  \n",
        "2322  Bread, grain/cereal products and potatoes  [Vegetarian]  \n",
        "\n",
-       "[2323 rows x 23 columns]"
+       "[2323 rows x 24 columns]"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 96,
    "id": "d2c372c3",
    "metadata": {},
    "outputs": [],
